# make-cmake

./: README.md
ch01.gcc/01.build_proc/: 01-1.hello.c  01-2.greeting.c  01.hello.c  function.c  function.h  main.c
ch01.gcc/02.preprocessor/: 01.define.c  02.define-macro.c  03-1.error-warning.c  03.error-warning.c  04-1.pragma.c  04-2.pragma.c  04.pragma.c  grandparent.h
ch01.gcc/02.preprocessor/include_guard/: child.c  grandparent.h  parent.h
ch01.gcc/03.optionTest/: mysource.c
ch01.gcc/03.optionTest/include/: function.c  main.c
ch01.gcc/03.optionTest/libs/: app.c
ch01.gcc/03.optionTest/libs/myInclude/: myheader.h
ch01.gcc/03.optionTest/linking/: linker  myheader.h
ch02.make/01.rules/01.makefile_order/: 01.GNUmakefile  02.makefile  03.Makefile
ch02.make/01.rules/02.rules/: 01.sample.Makefile  02.goal.Makefile  03-1.oneshell.Makefile  03.oneshell.Makefile  04.ignore.Makefile  05-1.depedency.Makefile  05.depedency.Makefile  06-1.silent.Makefile  06.silent.Makefile
ch02.make/02.variables/: 01.recursive-simple.Makefile  02.conditional.Makefile  03.cmd_subs.Makefile  04.append.Makefile  05.override.Makefile  06.canned.Makefile  07.undefine.Makefile  08.make_env.Makefile  09.make_args.Makefile  10.substitute.Makefile  11.target_specific.Makefile  12.pattern_specific.Makefile  13.shell_script.Makefile
ch02.make/03.Makefiles/: 01-1.dummy.Makefile  02.prerequisites.Makefile  03-1.depedency-include.Makefile  03.depedency.Makefile  04.variables.Makefile  05.auto-variables.Makefile  06.pre-defined.Makefile  07.pattern-match.Makefile  08.suffix.Makefile  09.var-substutution.Makefile  10.multi-targets.Makefile  11.phony.Makefile  exam1.c  exam2.c  task1.c  task2.c  task3.c  zreadme.txt
ch02.make/04.functions/: 01.subst.Makefile  02.filename.Makefile  03.foreach.Makefile  04.shell.Makefile  05.call.Makefile
ch02.make/05.advanced/00.project/: 01.full-depedency.Makefile  02.per-file-depedency.Makefile
ch02.make/05.advanced/01.project1/: 01.full-depedency.Makefile  02-1.per-file-depedency.Makefile  02.per-file-depedency.Makefile  03.auto-var.Makefile  04.vpath.Makefile  05.separated.Makefile  06.make-control.Makefile
ch02.make/05.advanced/02.project2/: 01.single.Makefile  02.recursive.Makefile  03.functions.Makefile
ch02.make/05.advanced/03.project3/: Makefile
ch02.make/05.advanced/03.project3/app/player/: Makefile
ch02.make/05.advanced/03.project3/lib/codec/: Makefile
ch02.make/05.advanced/03.project3/lib/db/: Makefile
ch02.make/05.advanced/03.project3/lib/ui/: Makefile
ch03.libs/00.lib_linking/: cprog.c
ch03.libs/02.libStatic-make/appSrc/: Makefile
ch03.libs/02.libStatic-make/libs/: Makefile
ch03.libs/03.libShared-make/appSrc/: Makefile
ch03.libs/03.libShared-make/libs/: Makefile
ch03.libs/04-1.liball-make/appSrc/: Makefile
ch03.libs/04-1.liball-make/include/: b.h
ch03.libs/04-1.liball-make/libs/: Makefile
ch03.libs/04.liball-make/libs/: Makefile
ch04.cmake/00.basics/bash/: build.sh  delete.sh
ch04.cmake/00.basics/cmake/: CMakeLists.txt
ch04.cmake/00.basics/make/: Makefile
ch04.cmake/01.add_executable/: CMakeLists.txt
ch04.cmake/02.add_library/: CMakeLists.txt  main.c
ch04.cmake/03-1.link_libraries-shared/: CMakeLists.txt  func1.c
ch04.cmake/03.link_libraries-static/: CMakeLists.txt
ch04.cmake/04-1.target_link_libraries/: CMakeLists.txt
ch04.cmake/04.target_link_libraries/: CMakeLists.txt
ch04.cmake/05-1.variables-list/: CMakeLists.txt
ch04.cmake/05-2.variables-list/: CMakeLists.txt
ch04.cmake/05-3.variables-string/: CMakeLists.txt
ch04.cmake/05-4.variables-string/: CMakeLists.txt
ch04.cmake/05.variables-set/: CMakeLists.txt
ch04.cmake/06-1.option/: CMakeLists.txt  func2.c
ch04.cmake/06-2.option/: CMakeLists.txt
ch04.cmake/06.option/: CMakeLists.txt
ch04.cmake/07-1.add_subdirectory/: CMakeLists.txt
ch04.cmake/07-1.add_subdirectory/appSrc/: CMakeLists.txt
ch04.cmake/07-1.add_subdirectory/libs/: CMakeLists.txt
ch04.cmake/07-2.add_subdirectory-scope/: CMakeLists.txt
ch04.cmake/07-2.add_subdirectory-scope/mysub/: CMakeLists.txt
ch04.cmake/07.add_subdirectory/: CMakeLists.txt
ch04.cmake/07.add_subdirectory/libs/: CMakeLists.txt
ch04.cmake/08-1.include-module/: CMakeLists.txt
ch04.cmake/08-1.include-module/appSrc/: CMakeLists.txt  main.cmake
ch04.cmake/08-1.include-module/libs/: CMakeLists.txt  libs.cmake
ch04.cmake/08.include/: CMakeLists.txt
ch04.cmake/08.include/appSrc/: CMakeLists.txt
ch04.cmake/08.include/libs/: CMakeLists.txt
ch04.cmake/09.link_directories/appSrc/: CMakeLists.txt
ch04.cmake/09.link_directories/libs/: CMakeLists.txt
ch04.cmake/10.add_compile_definition/: CMakeLists.txt  main.c
ch04.cmake/11.buildtype/: CMakeLists.txt  main.c
ch04.cmake/12-1.multi-targets/: CMakeLists.txt
ch04.cmake/12-1.multi-targets/exam/: CMakeLists.txt  exam2.c
ch04.cmake/12-1.multi-targets/libs/: CMakeLists.txt  max.c
ch04.cmake/12.multi-targets/: CMakeLists.txt
ch04.cmake/12.multi-targets/exam/: CMakeLists.txt  exam3.c
ch04.cmake/12.multi-targets/libs/: CMakeLists.txt  min.c
ch04.cmake/13.add_custom_target-dependencies/: CMakeLists.txt  headers.tar
ch04.cmake/14-1.add_custom_command-target/: CMakeLists.txt
ch04.cmake/14.add_custom_command-output/: CMakeLists.txt
ch04.cmake/14.add_custom_command-output/backup/: headers.tar
ch04.cmake/15.imported/cmake1/: CMakeLists.txt  test1.c
ch04.cmake/15.imported/cmake2/: CMakeLists.txt  test3.c
ch04.cmake/16.install/: CMakeLists.txt  main.c  max.c
ch04.cmake/17.cross-compile/: CMakeLists.txt  myToolchain.cmake
