## ch04.cmake/11.buildtype/CMakeLists.txt
cmake_minimum_required(VERSION 3.22)
project("educafe-11" LANGUAGES C)
# set(CMAKE_BUILD_TYPE default CACHE STRING "Build type" FORCE)	
set(CMAKE_BUILD_TYPE default)	
set(CMAKE_VERBOSE_MAKEFILE true)
include_directories(${CMAKE_SOURCE_DIR}/headers)
add_compile_options(-Wall)
add_compile_definitions(MYNUM)

if(${CMAKE_BUILD_TYPE} STREQUAL debug)
	set(CMAKE_EXE_LINKER_FLAGS "-L $ENV{HOME}/lib")
	add_executable(a.out_debug main.c)
	target_link_libraries(a.out_debug PUBLIC funcs)
elseif(${CMAKE_BUILD_TYPE} MATCHES release)
	find_library(FUNCS_LIB funcs PATHS /home/educafe/lib)
	add_executable(a.out_release main.c)
	target_link_libraries(a.out_release PUBLIC ${FUNCS_LIB})
else()
	add_library(funcs SHARED func1.c func2.c)
	link_libraries(funcs)
	add_executable(a.out main.c)
endif()
message("Build Config : " ${CMAKE_BUILD_TYPE})

